# patch-clamp-analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: gramicidin_a.toml
notebooks/: gramicidin_a_analysis.ipynb
patchclamp/: config.py  detection.py  io.py  iv.py  occupancy.py  plotting.py  preprocessing.py
scripts/: run_analysis.py
tests/: test_config.py  test_detection.py  test_iv.py  test_occupancy.py
