[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name        = "patch-clamp-analysis"
version     = "0.1.0"
description = "Universal single-channel patch-clamp analysis pipeline"
readme      = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "pyabf>=2.3",
]

[tool.setuptools.packages.find]
include = ["patchclamp*"]
